crates/aranya-policy-compiler/tests/data/type_errors/publish_non_command_int_invalid_type.fail.policy
action foo() {
    publish 3
}
